fixed grey borders and footer squishing

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@ ul {
 
 body {
     font-family: 'Open Sans', sans-serif;
-    border-left: 15vw solid #f2f2f2;
-    border-right: 15vw solid #f2f2f2;
+    border-left: 10vw solid #f2f2f2;
+    border-right: 10vw solid #f2f2f2;
 }
 
 header {
@@ -82,7 +82,6 @@ footer {
     background:  #6d72ed;
     display: flex;
     width: 33.33%;
-    height: 35vh;
     margin: 0;
     justify-content: center;
     align-items: center;
@@ -97,7 +96,6 @@ footer {
 
 .bottomText {
     display: flex;
-    /* background-color:rgba(130, 134, 235); */
     position: absolute;
     font-family: 'Oswald', sans-serif;
     color: white;
